kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-url-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: short-url
  template:
    metadata:
      labels:
        app: short-url
    spec:
      containers:
        - name: short-url
          image: your-docker-image:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "2"
            requests:
              memory: "1Gi"
              cpu: "2"
          ports:
            - containerPort: 8080
