kubernetes/cassandra.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cassandra
  labels:
    app: cassandra
spec:
  serviceName: cassandra
  replicas: 1
  selector:
    matchLabels:
      app: cassandra
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      terminationGracePeriodSeconds: 500
      containers:
        - name: cassandra
          image: cassandra:5.0
          imagePullPolicy: Always
          ports:
            - containerPort: 7000
              name: intra-node
            - containerPort: 7001
              name: tls-intra-node
            - containerPort: 7199
              name: jmx
            - containerPort: 9042
              name: cql
          resources:
            limits:
              cpu: "500m"
              memory: 2Gi
            requests:
              cpu: "500m"
              memory: 2Gi
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - nodetool drain
          readinessProbe:
            tcpSocket:
              port: 9042
            initialDelaySeconds: 30
            timeoutSeconds: 20
            periodSeconds: 10
            failureThreshold: 3

          volumeMounts:
            - name: cassandra-data
              mountPath: /cassandra_data
            - name: cassandra-config
              mountPath: /etc/cassandra-rackdc.properties
              subPath: cassandra-rackdc.properties
      volumes:
        - name: cassandra-config
          configMap:
            name: cassandra-config
        - name: cassandra-hosts
          configMap:
            name: cassandra-hosts
  volumeClaimTemplates:
    - metadata:
        name: cassandra-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: fast
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cassandra
  name: cassandra
spec:
  clusterIP: None
  ports:
    - port: 9042
  selector:
    app: cassandra
