kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-cassandra
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: cassandra
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: url-shortener
      ports:
        - protocol: TCP
          port: 9042
